Fixed contrast issues with buttons and a variety of elements on the homepage. Made coin-like icons for What Is section. Various CSS changes.

--- a/JobSpotAplication/wwwroot/css/dashboard.css
+++ b/JobSpotAplication/wwwroot/css/dashboard.css
@@ -58,7 +58,11 @@ footer {
 }
 
 .search-form {
-    max-width: 1060px;
+    width: 100%;
+    padding: 1.25rem;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 4px 4px rgba(92, 148, 242,0.25);
 }
 
 .form-control {
@@ -66,6 +70,7 @@ footer {
     font-size: 16px;
     border-bottom: 2px solid var(--purple-regular);
     transition: 0.2s ease;
+    background-color: #f0f0f0;
 }
 
     .form-control:focus {
@@ -94,12 +99,13 @@ button[type="submit"] {
     font-size: 16px;
     border-bottom: 2px solid var(--purple-regular);
     transition: 0.2s ease;
+    background-color: #f0f0f0;
 }
 
-.custom-select:focus {
-    box-shadow: 0 0 0 .2rem var(--purple-extra-light);
-    border-bottom: 2px solid transparent;
-}
+    .custom-select:focus {
+        box-shadow: 0 0 0 .2rem var(--purple-extra-light);
+        border-bottom: 2px solid transparent;
+    }
 
 .h1 h1 {
     font-family: proxima-nova, 'Rubik', sans-serif;
@@ -118,14 +124,6 @@ label {
     margin-bottom: .2rem;
     margin-top: .8rem;
     font-weight: 500;
-}
-
-.card-img-top {
-    width: 150px;
-    height: 150px;
-    border-radius: 150px;
-    overflow: hidden;
-    opacity: 0.5;
 }
 
 nav {
@@ -199,11 +197,13 @@ nav {
   margin-top: 20px;
 }
 
+/* Results Card Formatting */
 .card {
     margin-top: 30px;
     min-height: 200px;
     padding-right: 0px;
     padding-left: 0px;
+    box-shadow: 0 4px 4px rgba(92, 148, 242,0.25);
 }
 
 .card-body .btn {
@@ -211,7 +211,7 @@ nav {
 }
 
 .card-header {
-    background-color: var(--purple-light);
+    background-color: var(--purple-regular);
     border-bottom: var(--purple-dark);
     color: white;
 }
